# numerics

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: build-and-test.yml
benches/: matmul.rs
include/: core.h  ops.h
include/linalg/: cholesky.h  lu.h  solve.h
src/: gemm.rs  lib.rs  main.cpp  main.rs
src/core/: error.rs  gemm.rs  matrix.rs  mod.rs  vector.rs
src/include/: core.h  ops.h
src/linalg/: chol.rs  lu.rs  mod.rs  solve.rs
test/: CMakeLists.txt  test_core.cpp  test_linalg.cpp  test_ops.cpp
